syntax = "proto3";

package transaction;

message TxnStepReq {
  string StepFunc = 1;
  bytes Context = 2; // Context JSON encoded TxnCtx
}

message TxnStepResp {
  reserved 2;
  reserved "Resp";
  string Error = 1;
}

service TxnSvc {
  rpc RunStep(TxnStepReq) returns(TxnStepResp) {}
}
